# fifty

./: MANIFEST.in  README.md  pyproject.toml
fifty/commands/: train.py  whatis.py
fifty2/: cli.py
fifty2/commands/: train.py  whatis.py
