[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fifty2"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Updated fifty package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "docopt",
    "hyperopt",
    "matplotlib",
    "pathlib",
    "numpy",
    "seaborn",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
fifty2 = "fifty2.cli:main"

[project.urls]
"Homepage" = "https://github.com/AlexanderZh/fifty"
"Bug Tracker" = "https://github.com/AlexanderZh/fifty"
